2014-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppCNPy-intro.Rnw:
	  - Updated vignette to reflect integer
	    support on all platforms thanks to 'long long'
	  - Switched to font used in Rcpp vignettes
	  - Switched to vignette processing via highlight

2014-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Set 'CXX_STD = CXX11' which gets us 'long long'
	* DESCRIPTION: Add depends on R (>= 3.1.0)

	* src/cnpy.h: No longer test for RCPP_HAS_LONG_LONG_TYPES
        * src/cnpy.cpp: Idem
        * src/cnpyMod.cpp: Idem

2013-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.2

	* src/cnpy.cpp (BigEndianTest): Re-use the R compile-time
	configuration result to switch between little and big endian

	* tests/saveAndLoad.R: New test file for save and load cycle
	* tests/saveAndLoad.Rout.save: And result for comparison

2013-11-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.1

	* DESCRIPTION: Import methods and Rcpp
	* NAMESPACE: Idem

	* src/cnpy.h: Synchronized with version in cnpy repo
	* src/cnpy.cpp: Idem

2013-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp (npyHasIntegerSupport): New function to test if
	integer support was compiled in, also exported via Rcpp Modules to R
	* man/RcppCNPy-package.Rd: Added documentation entry

	* tests/loadFiles.R: Updated regression test to use run-time integer
	support check, and test integer support if available
	* tests/loadFiles.Rout.save: Updated accordingly

	* RcppCNPy-intro.Rnw: Updated the discussion of integer support and
	clarified that only RcppCNPy needs to be rebuilt with -std=c++11
	* DESCRIPTION: Idem

	* inst/THANKS: Added to show thanks to Carl and Gong

2013-02-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpy.h: Define R_NO_REMAP before including Rinternals to not
	define length(), error(), ... but rather Rf_length(), Rf_error()

	* src/cnpy.cpp: Add a bogus unused variable at the never-reached end