@@ -4,19 +4,22 @@
 #     https://github.com/eddelbuettel/r-travis/
 
 language: c
-#
+
+env:
+  global:
+    - _R_CHECK_FORCE_SUGGESTS_=FALSE
+
 before_install:
-  #- curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - curl -OL http://raw.github.com/eddelbuettel/r-travis/master/scripts/travis-tool.sh
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
-#
+
 install:
   - ./travis-tool.sh install_r Rcpp
-#
+
 script:
   - ./travis-tool.sh run_tests
-#
+
 notifications:
   email:
     on_success: change
